--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Denver Exploration</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+<header>Welcome to Denver!</header>
+<br>
 <body>
-    
+    <main>
+    <div class="buttons">
+        <button class= "button1">Hotels</button>
+        <button class= "button2">Restaurants</button>
+        <button class= "button3">Attractions</button>
+    </div> 
+      
+    <script src="script.js"></script>
 </body>
 </html>
