--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <main>
     <div class="buttons">
-        <button class= "button1">Hotels</button>
-        <button class= "button2">Restaurants</button>
-        <button class= "button3">Attractions</button>
+        <button class= "button">Hotels</button>
+        <button class= "button">Restaurants</button>
+        <button class= "button">Attractions</button>
     </div> 
       
     <script src="script.js"></script>
