--- a/index.html
+++ b/index.html
@@ -14,13 +14,47 @@
     <div class="buttons">
         <button class= "button">Attractions</button>
         <button class= "button">Hotels</button>
-        <button class= "button" id="Restaurants">Restaurants</button>
-       
-    </div> 
-    <div class="droprest">
-            <button onclick="myFunction()" class="dropbtn">Restaurants</button>
-            <div id="myDropdown" class="dropdown-content">
+        <button onclick="myFunction()" class="button">Restaurants</button>
+            <div id="Restaurants" class="dropdown-content">
               <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+              <div class="box">
+                <article class="media">
+                  <div class="media-left">
+                    <figure class="image is-64x64">
+                      <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
+                    </figure>
+                  </div>
+                  <div class="media-content">
+                    <div class="content">
+                      <p>
+                        <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                        <br>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+                      </p>
+                    </div>
+                    <nav class="level is-mobile">
+                      <div class="level-left">
+                        <a class="level-item" aria-label="reply">
+                          <span class="icon is-small">
+                            <i class="fas fa-reply" aria-hidden="true"></i>
+                          </span>
+                        </a>
+                        <a class="level-item" aria-label="retweet">
+                          <span class="icon is-small">
+                            <i class="fas fa-retweet" aria-hidden="true"></i>
+                          </span>
+                        </a>
+                        <a class="level-item" aria-label="like">
+                          <span class="icon is-small">
+                            <i class="fas fa-heart" aria-hidden="true"></i>
+                          </span>
+                        </a>
+                      </div>
+                    </nav>
+                  </div>
+                </article>
+              </div>
+    </div>   
     <script src="script.js"></script>
 </body>
 </html>
