--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <article class="media">
                   <div class="media-left">
                     <figure class="image is-64x64">
-                      <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
+                      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Flag_of_Colorado.svg/1280px-Flag_of_Colorado.svg.png" alt="Image">
                     </figure>
                   </div>
                   <div class="media-content">
